[gd_scene load_steps=19 format=2]

[ext_resource path="res://imagens/Background/darkPurple.png" type="Texture" id=1]
[ext_resource path="res://imagens/Objects/BGTile (3).png" type="Texture" id=2]
[ext_resource path="res://Cenas/Enemys/tower/Torre.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Player/nave_player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Enemys/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/minimapa/MiniMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/Gem/gem_spawn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/Map/Mapa_Captura_Bandeira.gd" type="Script" id=8]
[ext_resource path="res://Cenas/Gem/gui_gem.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cenas/Gem/gem_body.tscn" type="PackedScene" id=10]
[ext_resource path="res://Cenas/Menu_Pausa/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fontes/Boldness.otf" type="DynamicFontData" id=12]

[sub_resource type="GradientTexture" id=1]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="TileSet" id=3]
0/name = "BGTile (3).png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 256, 256, 0, 256, 0, 0, 256, 0 )

[sub_resource type="TileSet" id=5]
0/name = "BGTile (3).png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 12 )

[node name="Mapa_Captura_Bandeira" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 1024.0 ],
"_edit_vertical_guides_": [ 768.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 768, 1024 )
scale = Vector2( 12.4998, 13 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="down_side_spawn" type="Sprite" parent="."]
position = Vector2( 768, 2000 )
scale = Vector2( 0.108733, 84.7971 )
texture = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="down_side_spawn"]

[node name="up_side_spawn2" type="Sprite" parent="."]
position = Vector2( 768, 48 )
scale = Vector2( 0.108733, 84.7971 )
texture = SubResource( 1 )

[node name="down_side" type="TileMap" parent="."]
position = Vector2( 768, 1024 )
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( -2228234, 0, 0, -2293754, 0, 0, 524266, 0, 0, 458754, 0, 0, 458774, 0, 0, 1310702, 0, 0, 1245194, 0, 0, 1966086, 0, 0 )

[node name="up_side" type="TileMap" parent="."]
position = Vector2( 768, 1024 )
rotation = -3.14329
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 524262, 0, 0, 524266, 0, 0, 524270, 0, 0, 524282, 0, 0, 524286, 0, 0, 458754, 0, 0, 458766, 0, 0, 458770, 0, 0, 458774, 0, 0, 1310702, 0, 0, 1310706, 0, 0, 1310710, 0, 0, 1245190, 0, 0, 1245194, 0, 0, 1245198, 0, 0 )

[node name="laterais" type="TileMap" parent="."]
position = Vector2( 1152, 1672 )
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 5 )
collision_layer = 7
collision_mask = 7
format = 1
tile_data = PoolIntArray( -3801134, 0, 0, -3801130, 0, 0, -3801126, 0, 0, -3801122, 0, 0, -3801118, 0, 0, -3801114, 0, 0, -3801110, 0, 0, -3801106, 0, 0, -3801102, 0, 0, -3801098, 0, 0, -3801094, 0, 0, -3801090, 0, 0, -3866622, 0, 0, -3866618, 0, 0, -3866614, 0, 0, -3866610, 0, 0, -3866606, 0, 0, -3538990, 0, 0, -3604462, 0, 0, -3276846, 0, 0, -3342318, 0, 0, -3014702, 0, 0, -3080174, 0, 0, -2752558, 0, 0, -2818030, 0, 0, -2490414, 0, 0, -2555886, 0, 0, -2228270, 0, 0, -2293742, 0, 0, -1966126, 0, 0, -2031598, 0, 0, -1703982, 0, 0, -1769454, 0, 0, -1441838, 0, 0, -1507310, 0, 0, -1179694, 0, 0, -1245166, 0, 0, -917550, 0, 0, -983022, 0, 0, -655406, 0, 0, -720878, 0, 0, -393262, 0, 0, -458734, 0, 0, -131118, 0, 0, -196590, 0, 0, 131026, 0, 0, 65554, 0, 0, 393170, 0, 0, 327698, 0, 0, 655314, 0, 0, 589842, 0, 0, 917458, 0, 0, 917462, 0, 0, 917466, 0, 0, 917470, 0, 0, 917474, 0, 0, 917478, 0, 0, 917482, 0, 0, 917486, 0, 0, 917490, 0, 0, 917494, 0, 0, 917498, 0, 0, 917502, 0, 0, 851970, 0, 0, 851974, 0, 0, 851978, 0, 0, 851982, 0, 0, 851986, 0, 0 )

[node name="Torre3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1416, 736 )
rotation = 0.0257099

[node name="Torre4" parent="." instance=ExtResource( 3 )]
position = Vector2( 376, 352 )
rotation = 0.0257099

[node name="Torre5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1172.55, 353.453 )
rotation = 0.0257099

[node name="Torre2" parent="." instance=ExtResource( 3 )]
position = Vector2( 767.263, 734.625 )
rotation = 0.0257099

[node name="Torre" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 736 )
rotation = 0.0257099

[node name="gem_spawn" parent="." instance=ExtResource( 7 )]
position = Vector2( 767.722, 35.8748 )
team = 2

[node name="gem_spawn2" parent="." instance=ExtResource( 7 )]
position = Vector2( 783.643, 2007.73 )
team = 1

[node name="player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 775.116, 1867.69 )

[node name="Tempo_menu" type="RichTextLabel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1250.0
margin_top = 1568.0
margin_right = 1613.0
margin_bottom = 1845.0
custom_fonts/normal_font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Tempo_menu"]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MiniMap" parent="CanvasLayer" instance=ExtResource( 6 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_bottom = 0.0
player = NodePath("../../player2")

[node name="gui_gem" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Mob" parent="." instance=ExtResource( 5 )]
position = Vector2( 442.333, 767.723 )

[node name="Mob2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1104.84, 738.572 )

[node name="Alert" parent="." instance=ExtResource( 10 )]
position = Vector2( 777.064, 38.0381 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer2" instance=ExtResource( 11 )]
pause_mode = 2
visible = false
[connection signal="timeout" from="Tempo_menu/Timer" to="." method="_on_Timer_timeout"]
